Enable dynamic agent loading for Blockhound on Java 25+